# libertai-agents

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: agentkit-plugin-ci.yml  agentkit-plugin-npm.yml  agentkit-plugin-pypi.yml  ci.yaml  pypi.yaml  pytest.yaml  x402-ci.yml  x402-npm.yml  x402-pypi.yml
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/src/: config.py  main.py
backend/src/interfaces/: agent.py  aleph.py
backend/src/utils/: agent.py  aleph.py  message.py  storage.py
deployment/: add_ssh_key.sh  deploy.sh  pip.Dockerfile  poetry.Dockerfile  pyproject.Dockerfile  requirements.Dockerfile
examples/agentkit/: .env.example  package-lock.json  package.json
examples/agentkit/python/: .env.example  Dockerfile  README.md  agent.py  config.py  requirements.txt
examples/agentkit/src/: agent.ts  config.ts
examples/agentkit/typescript/: Dockerfile  docker-compose.yml  package-lock.json  package.json
examples/github-actions/: README.md  deploy.yml
examples/pydantic-ai/: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
libertai_agents/: .gitignore  mypy.ini  pyproject.toml
libertai_agents/libertai_agents/: __init__.py  agents.py
libertai_agents/libertai_agents/agents/: __init__.py  agent.py
libertai_agents/tests/: conftest.py  test_agents.py  test_models.py  test_utils.py
runtimes/python3.11-debian12/: create_disk_image.sh  init1.py
(+16 files in other folders)
