[tool.poetry]
name = "libertai-agents-backend"
version = "0.1.0"
description = "Backend to handle LibertAI agents registration and deployment"
authors = ["LibertAI.io team <hello@libertai.io>"]
readme = "README.md"
homepage = "https://libertai.io"
repository = "https://github.com/LibertAI/libertai-agents"
documentation = "https://docs.libertai.io"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.2" }
aleph-sdk-python = "^1.1.0"
libertai-utils = "0.0.11"
setuptools = "^75.4.0"
paramiko = "^3.5.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
ruff = "^0.7.0"

[tool.ruff]
lint.select = ["C", "E", "F", "I", "W"]
lint.ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
